@@ -18,7 +18,6 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Test the timeout handling of autcross.
 . ./defs
 set -e
 
@@ -48,6 +47,34 @@ State: 0
 --END--
 EOF
 
-autcross -Fin 'ltl2tgba %[no]M>%O' 'ltl2tgba %M>%O' --csv=out.csv && exit 1
+autcross --verbose \
+         -Fin 'ltl2tgba %[no]M>%O' 'ltl2tgba %M>%O' --csv=out.csv && exit 1
 test 3 = `grep -c '"ok"' out.csv`
 
+sed 's/AP: 0/AP: 0 "a"/g' in |
+    autcross --language-preserved autfilt 2>err && exit 1
+grep 'autcross: failed to read automaton from -' err
+
+autcross -T3 --verbose --language-preserved --ignore-execution-failures \
+         --csv=out.csv --omit-missing --low --medium --high --stop-on-error \
+         'sleep 10; autfilt %H>%O' 'false %H %O' 2>err -Fin
+cat err
+grep 'some error was detected' err && exit 1
+grep 'No major problem' err
+grep '2 timeouts occurred' err
+grep '2 non-zero exit statuses were ignored' err
+test 1 = `wc -l < out.csv`
+
+autcross -T3 --verbose --language-preserved --ignore-execution-failures \
+         --csv=out.csv --omit-missing --low --medium --high --stop-on-error \
+         --fail-on-timeout \
+         'sleep 10; autfilt %H>%O' 'false %H %O' 2>err -Fin && exit 1
+cat err
+grep 'No major problem' err && exit 1
+grep 'some error was detected ' err
+grep '1 non-zero exit status was ignored' err
+test 1 = `wc -l < out.csv`
+
+autcross - 2> err && exit 1
+cat err
+grep 'autcross: No tool to run' err
